--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,10 +5,8 @@ services:
       dockerfile: Dockerfile
     container_name: businessweb-site
     restart: unless-stopped
-    ports:
-      - "8080:8080"
     environment:
-      - NGINX_HOST=localhost
+      - NGINX_HOST=businessweb.guillaume-lcte.fr
       - NGINX_PORT=8080
     healthcheck:
       test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:8080/health"]
