--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       - dokploy-network
       - client-mailpit-qf3zat
     labels:
-      - "traefik.http.services.businessweb.loadbalancer.server.port=4000"
+      - "traefik.http.services.client-businessweb-lqmi8v-32-web.loadbalancer.server.port=4000"
 
 networks:
   dokploy-network:
