--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,7 @@ services:
       - client-mailpit-qf3zat
     labels:
       - "traefik.http.services.client-businessweb-lqmi8v-32-web.loadbalancer.server.port=4000"
+      - "traefik.http.services.client-businessweb-lqmi8v-32-websecure.loadbalancer.server.port=4000"
 
 networks:
   dokploy-network:
